--- a/haskell-server/docker/Dockerfile.boardgame-haskell-base
+++ b/haskell-server/docker/Dockerfile.boardgame-haskell-base
@@ -9,12 +9,6 @@
 FROM ubuntu:trusty
 
 #
-# Get basic untilities.
-#
-RUN apt-get update \
-  && apt-get install -y apt-utils wget curl zip unzip git
-
-#
 # Set up the base environment.
 #
 ENV WORKSPACE /home/me/dev/boardgame
@@ -24,17 +18,23 @@ ENV PATH $PATH:.
 RUN echo `pwd` && echo $PATH && whoami
 
 #
+# Get basic untilities.
+#
+RUN apt-get update \
+  && apt-get install -y apt-utils wget curl zip unzip git
+
+#
 # Install postgres.
 #
 RUN echo "deb http://apt.postgresql.org/pub/repos/apt trusty-pgdg main" > /etc/apt/sources.list.d/pgdg.list \
   && wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - \
-  &&  apt-get update \
+  && apt-get update \
   && apt-get install -y postgresql-9.6 postgresql-client-9.6 postgresql-contrib-9.6 libpq-dev postgresql-server-dev-9.6 pgadmin3 \
   && dpkg -L libpq-dev
   # Makes sure the client-side postgres library needed by Haskell Persistent was installed.
 
 #
-# Install node js.
+# Install node.
 #
 RUN curl -sL https://deb.nodesource.com/setup_9.x | bash - \
   && apt-get update \
