--- a/scala-server/docker/Dockerfile.boardgame-scala-packager
+++ b/scala-server/docker/Dockerfile.boardgame-scala-packager
@@ -2,59 +2,20 @@
 #
 # Base of boardgame development.
 #
+ARG BASE=azadbolour/jvm-node:1.0
 
-#
-# Begin with ubuntu version 14.04.
-#
-FROM ubuntu:trusty
-RUN whoami
-RUN apt-get update
+FROM BASE
 
 #
 # Set up the base environment.
 #
 ENV WORKSPACE /home/me/dev/boardgame
-RUN mkdir -p $WORKSPACE
+RUN mkdir -p $WORKSPACE \
+  && echo `pwd`&& echo $PATH && whoami
+
 WORKDIR $WORKSPACE
+
 ENV PATH $PATH:.
-RUN echo `pwd`&& echo $PATH && whoami
-
-#
-# Get basic utilities.
-#
-RUN apt-get install -y dialog apt-utils wget curl software-properties-common python-software-properties zip unzip build-essential git
-
-#
-# Get JDK.
-#
-RUN add-apt-repository ppa:openjdk-r/ppa \
-  && apt-get update \
-  && apt-get install -y openjdk-8-jdk && java -version
-
-ENV CA_CERTIFICATES_JAVA_VERSION 20170531+nmu1
-RUN /var/lib/dpkg/info/ca-certificates-java.postinst configure
-
-#
-# Note. On Jan 14 2018 sbt could not be authenticated, though the commented section 
-# is the documented manner of installing sbt 1.x as per:
-#   
-#     http://www.scala-sbt.org/1.x/docs/Installing-sbt-on-Linux.html.
-#
-
-#
-# Install node.
-#
-RUN curl -sL https://deb.nodesource.com/setup_9.x | bash -
-RUN apt-get update \
-  && apt-get install -y nodejs
-
-#
-# Install SBT
-#
-# RUN echo "deb https://dl.bintray.com/sbt/debian /" | tee -a /etc/apt/sources.list.d/sbt.list \
-#  && apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 2EE0EA64E40A89B84B2DF73499E82A75642AC823 \
-#  && apt-get update \
-#  && apt-get -y install sbt
 
 #
 # Install sbt from the official DEB package.
