haskell cleanup of Piece - work in progress

--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -62,6 +62,7 @@ library
       Bolour.Util.FileUtil
       Bolour.Util.Empty
       Bolour.Util.BlackWhite
+      Bolour.Util.FrequencyDistribution
       Bolour.Language.Util.WordUtil
       Bolour.Language.Domain.WordDictionary
       Bolour.Language.Domain.DictionaryIO
