--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -81,16 +81,17 @@ library
       BoardGame.Common.Domain.GridPiece
       BoardGame.Common.Domain.PieceProviderType
       BoardGame.Common.Domain.GameParams
+      BoardGame.Common.Domain.GameInitialPieces
+      BoardGame.Common.Domain.PlayPiece
+      BoardGame.Common.Domain.StopInfo
+      BoardGame.Common.Domain.GameMiniState
+      BoardGame.Common.Domain.GameSummary
       BoardGame.Common.Message.HandShakeResponse
       BoardGame.Common.Message.StartGameRequest
       BoardGame.Common.Message.StartGameResponse
       BoardGame.Common.Message.CommitPlayResponse
       BoardGame.Common.Message.MachinePlayResponse
       BoardGame.Common.Message.SwapPieceResponse
-      BoardGame.Common.Domain.PlayPiece
-      BoardGame.Common.Domain.StopInfo
-      BoardGame.Common.Domain.GameMiniState
-      BoardGame.Common.Domain.GameSummary
       BoardGame.Server.Domain.PieceProvider
       BoardGame.Server.Domain.Board
       BoardGame.Server.Domain.GameError
