--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -81,7 +81,7 @@ library
       BoardGame.Common.Domain.GridPiece
       BoardGame.Common.Domain.PieceProviderType
       BoardGame.Common.Domain.GameParams
-      BoardGame.Common.Domain.GameInitialPieces
+      BoardGame.Common.Domain.InitPieces
       BoardGame.Common.Domain.PlayPiece
       BoardGame.Common.Domain.StopInfo
       BoardGame.Common.Domain.GameMiniState
