--- a/haskell-server/boardgame.cabal
+++ b/haskell-server/boardgame.cabal
@@ -290,14 +290,13 @@ executable boardgame-server
   default-language: Haskell2010
 
 executable trial
-  main-is: trial/CatchTrial.hs
+  main-is: trial/TempTrial.hs
   ghc-options: -W -fno-warn-unused-binds -fno-warn-unused-matches
   build-depends:
       base
     , containers
-    , transformers
-    , mtl
-    , logging-effect >= 1.1
+    , aeson
+    , bytestring
   default-language: Haskell2010
 --executable trial
 --  main-is: app/Trial.hs
