--- a/haskell-server/docker/Dockerfile.boardgame-haskell-packager
+++ b/haskell-server/docker/Dockerfile.boardgame-haskell-packager
@@ -1,10 +1,11 @@
-
 #
 # NOTE. This docker file is not currently being used.
-# Instead we use build-prod.sh to build the haskell server.
+# Instead we use ../package.sh to build the haskell server.
 #
 # But the current file is retained as the documentation of how to 
 # set up the initial haskell development environment from scratch.
+#
+# TODO. Upgrade this file and use ../package.sh.
 #
 
 #
